@@ -28,6 +28,8 @@
  */
 /* $XFree86: xc/programs/Xserver/miext/rootless/rootlessCommon.c,v 1.4 2003/10/18 00:00:34 torrey Exp $ */
 
+#include "fb.h"
+
 /*
  * rlBlt.c
  */
